# study_buddy

./: .env.example  .gitignore  DEMO.md  GITHUB_SECRETS_SETUP.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  test.yml
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt  start.sh
ai-service/app/: __init__.py  config.py  logging_utils.py  main.py
ai-service/app/api/routes/: health.py  jobs.py  voice.py
ai-service/app/db/: connection.py
ai-service/app/models/: jobs.py
ai-service/app/services/: cloud_tasks.py  exam_generator.py  exam_grader.py  topic_extractor.py
ai-service/app/services/content_generator/: __init__.py  examples.py  notes.py  quiz.py
ai-service/app/services/document_processor/: chunker.py  extractors.py  validator.py
ai-service/app/services/embeddings/: generator.py  search.py
ai-service/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
ai-service/tests/: conftest.py  test_content_generator.py  test_document_processor.py  test_embeddings.py  test_exam_grader.py  test_health.py  test_integration.py  test_llm_provider.py  test_quiz_generator.py
evals/: README.md  sample_questions.jsonl
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  vercel.json
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: smoke.spec.ts
scripts/: seed-demo.ts
(+90 files in other folders)
