[project]
name = "studybuddy-ai-service"
version = "0.1.0"
description = "AI microservice for StudyBuddy platform"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
